--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.5",
         "tcg/voyager": "^1.1"
     },
     "require-dev": {
@@ -28,7 +29,11 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helper.php",
+            "app/Constant.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
